--- a/css/prueba.css
+++ b/css/prueba.css
@@ -1,40 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:wght@200;300&family=Ubuntu:ital,wght@1,300&display=swap');
 
-
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Nunito:wght@300&family=Palette+Mosaic&family=Poppins:wght@200;300&family=Ubuntu:ital,wght@1,300&display=swap');
 
 body{
     font-family: 'Nunito', sans-serif;
-    background-image: url(../img/fondo1.png);
+background-image: url(../img/ahhh\ 1.png);
     background-size: cover;
+
 
 }
 
 
-
 .container{
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(6,fr);
     grid-auto-rows: minmax(200px, auto) ;
-    background-color: aqua;
+    gap: 10px;
 }   
 
 
 div {
-    padding: 1em;
+    padding: 20px;
     text-align: center;
     vertical-align: middle;
-    gap: 3px;
 }
 
 
 
 .logo{
-    justify-self: start;
-    background-color: black;
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
 }
+
 
 
 .logo img{
@@ -43,24 +43,57 @@ div {
 }
 
 
-.menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    align-items: center;
-    grid-column-start: 2;
-    grid-column-end: 8;
-    border: 2px solid saddlebrown;
+.logo img:hover{
+    filter: blur(2px);
 }
 
+
+.menu {
+    grid-column-start: 2;
+    grid-column-end: 6;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    column-gap: 20px;
+}
+
+
+
 .menu > div{
-   background-color: aquamarine;
-   
+    align-self: center;
+    background-color: rgb(255, 205, 254);
+    border-radius: 100px;
+}
 
 
 .menu a{
-
+    color: rgb(107, 106, 106);
     text-decoration: none;
     font-size:larger;
+}
+
+
+.menu div:hover{
+    background-color: rgb(155, 143, 250);
+    box-shadow: 0 4px 16px rgb(32, 16, 136);
+    transition: all 0.2s ease;
+    
+}
+
+.menu a:hover{
+    color: rgba(255, 255, 255, 1) !important;
+}
+
+.img {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 6;
+    grid-auto-rows: minmax(200px, 90px);
+
+}
+
+.img:hover{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
 
@@ -71,29 +104,31 @@ div {
     grid-column-end: 5;
     grid-row-start:2;
     grid-row-end: 6;
-    background-color: black;
+    background-color: rgb(251, 186, 250);
+    opacity: 0.5;
+    border-radius: 20px;
 }
 
 
-.img {
-
-    grid-row-start: 2;
-    grid-row-end: 2;
-    background-color: black;
-    justify-content: start;
+.info p{
+    color: white;
+    font-size: medium;
 }
-
 
 
 .img2{
     grid-column-start: 5;
-    background-color: black;
-    
+    grid-column-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 6;
 }
 
+.img2 img:hover{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+}
 
 
 .footer{
     grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-end: 6;
 }
