--- a/css/lol.css
+++ b/css/lol.css
@@ -32,14 +32,14 @@ body {
 }
 
 .container>.header, .container>.content, .container>.sidebar, .container>.footer, .container>div {
-    background: #fff;
+
     padding: 20px;
     border: 1px solid #000000;
 }
 
 .container .footer{
     background-color: antiquewhite;
-    grid-column: 1/6;
+    grid-column: 2/6;
 
 }
 
@@ -49,5 +49,13 @@ body {
 }
 
 .container .header{
-    grid-row: 1/4;
+    grid-row: 1/5;
 }
+
+.related-post{
+}
+
+.related-post img:hover{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+
