--- a/css/lol.css
+++ b/css/lol.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Nunito:wght@300&family=Palette+Mosaic&family=Poppins:wght@200;300&family=Ubuntu:ital,wght@1,300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -24,9 +25,8 @@ body {
 /* CONTAINER */
 
 .container {
-    margin: 1.6em auto;
     display: grid;
-    gap: 1.6em;
+    gap: 10px;
     /* grid-template-columns: repeat(4, 1fr) 3%; */
     grid-template-columns: repeat(5, 1fr);
 }
@@ -34,11 +34,10 @@ body {
 .container>.header, .container>.content, .container>.sidebar, .container>.footer, .container>div {
 
     padding: 20px;
-    border: 1px solid #000000;
 }
 
 .container .footer{
-    background-color: antiquewhite;
+    background-color: rgba(24, 11, 67, 0.767);
     grid-column: 2/6;
 
 }
@@ -46,16 +45,65 @@ body {
 .container .content{
     grid-column: 2/6;
     grid-row: 1/3;
+    background-color:rgba(230, 162, 174, 0.37) ;
+    color: rgb(255, 255, 255);
+    
 }
 
 .container .header{
     grid-row: 1/5;
+    background-color: rgba(24, 11, 67, 0.767);
+    font-weight: 500;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    
 }
+
+
+.container .header img:hover{
+    cursor: pointer;
+    filter: blur(2px);
+}
+
+
+
+.header .sidebar{
+    display: grid;
+    text-align: center;
+    grid-row: 2/5;
+
+}
+
+.sidebar a{
+    font-size:larger;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+
+.header ul{
+    list-style: none;
+    background-color: rgba(154, 205, 102, 0.637);
+    border-radius: 20px;
+    padding: 30px;
+}
+
+
+.header ul:hover{
+    background-image: url(../img/coraje.png);
+    background-repeat: no-repeat;
+}
+
+
 
 .related-post{
+    border-radius: 100px;
+    background-color: rgba(154, 205, 102, 0.568);
 }
 
+
 .related-post img:hover{
+    cursor: pointer;
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
