--- a/css/galeria.css
+++ b/css/galeria.css
@@ -39,14 +39,17 @@ body {
 .container .footer{
     background-color: rgba(24, 11, 67, 0.767);
     grid-column: 2/6;
+    grid-row: 4/5;
 
 }
 
 .container .content{
     grid-column: 2/6;
-    grid-row: 1/3;
+    grid-row: 1/4;
     background-color:rgba(230, 162, 174, 0.37) ;
     color: rgb(255, 255, 255);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     
 }
 
@@ -114,12 +117,14 @@ body {
 
 .related-post{
     border-radius: 100px;
-    background-color: rgba(154, 205, 102, 0.568);
+    text-align: center;
 }
 
+.related-post h1{
+    text-align: center;
+}
 
 .related-post img:hover{
     cursor: pointer;
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
-
