--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ body {
     background-size: cover;
 }
 
+
 /* HEADER */
 
 .title h1 {
@@ -37,12 +38,18 @@ body {
 }
 
 .container .footer{
-    background-color: rgba(24, 11, 67, 0.767);
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(24, 11, 67, 0.603);
     grid-column: 2/6;
     grid-row: 4/4;
-
 }
 
+.footer img{
+    width: 50px;
+    height: 50px;
+    max-width:10%;
+}
 .container .content{
     grid-column: 2/6;
     grid-row: 1/3;
@@ -53,7 +60,7 @@ body {
 
 .container .header{
     grid-row: 1/5;
-    background-color: rgba(24, 11, 67, 0.767);
+    background-color: rgba(24, 11, 67, 0.603);
     font-weight: 500;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -126,3 +133,32 @@ body {
     transform:scale(1.3);
 }
 
+
+@media only screen and (max-width: 820px) {   
+
+    .container {
+        display:block;
+        gap: 10px;
+        grid-template-columns: repeat(5, 1fr);
+    }
+    
+    .container .header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .sidebar{
+        gap: 20px;
+    }
+
+    .container .content{
+        background-color: transparent;
+    }
+
+    .related-post{
+        display: flex;
+        justify-content: center;
+        background-color: transparent;
+    }
+}
