--- a/css/galeria.css
+++ b/css/galeria.css
@@ -48,10 +48,38 @@ body {
     grid-row: 1/5;
     background-color:rgba(230, 162, 174, 0.37) ;
     color: rgb(255, 255, 255);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
     
 }
+
+  .gallery div {
+    display: flex;
+    justify-content: center;
+  }
+  
+
+  .card {
+    margin: 10px 10% 10px 10%;
+    background: white;
+    border-radius: 20px;
+  }
+
+
+  .gallery .gallery-carousel {
+    overflow-x: scroll;
+    height: fit-content;
+    display: flex;
+    gap: 20px;
+    white-space: nowrap;
+    margin: 20px 6% 19px;
+  }
+  
+  .gallery .gallery-carousel img {
+    border-radius: 5px;
+    height: 232px;
+    min-height: 232px;
+    width: 408px;
+    object-fit: cover;
+  }
 
 .container .header{
     grid-row: 1/5;
@@ -127,4 +155,28 @@ body {
 .related-post img:hover{
     cursor: pointer;
     -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+
+@media only screen and (max-width: 820px) {   
+
+    .container {
+        display:block;
+        gap: 10px;
+        grid-template-columns: repeat(5, 1fr);
+    }
+    
+    .container .header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header .sidebar{
+        gap: 20px;
+    }
+
+    .container .content{
+        background-color: transparent;
+    }
+
 }
