--- a/css/personajes.css
+++ b/css/personajes.css
@@ -127,3 +127,33 @@ body {
     cursor: pointer;
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
+
+@media only screen and (max-width: 820px) {  
+     
+    .container .content{
+        background-color: transparent;
+            grid-column: 2/6;
+            grid-row: 1/4;
+            color: rgb(0, 0, 0);
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+    }
+
+
+    .container {
+        display:block;
+        gap: 10px;
+        grid-template-columns: repeat(5, 1fr);
+    }
+    
+    .header .sidebar{
+        gap: 20px;
+    }
+
+
+    .related-post{
+        display: flex;
+        justify-content: center;
+        background-color: transparent;
+    }
+}
