--- a/css/villanos.css
+++ b/css/villanos.css
@@ -20,6 +20,7 @@ body {
     padding: 20px 0;
     text-align: center;
     font-size: 2.9em;
+    color:  rgb(24, 11, 67);
 }
 
 /* CONTAINER */
@@ -126,4 +127,34 @@ body {
 .related-post img:hover{
     cursor: pointer;
     -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+
+@media only screen and (max-width: 820px) {  
+     
+    .container .content{
+        background-color: transparent;
+            grid-column: 2/6;
+            grid-row: 1/4;
+            color: rgb(0, 0, 0);
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+    }
+
+
+    .container {
+        display:block;
+        gap: 10px;
+        grid-template-columns: repeat(5, 1fr);
+    }
+    
+    .header .sidebar{
+        gap: 20px;
+    }
+
+
+    .related-post{
+        display: flex;
+        justify-content: center;
+        background-color: transparent;
+    }
 }
