Se cambia carpetas

--- a/views/index.html
+++ b/views/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href= "css/index.css">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <link rel="stylesheet" type="text/css" href= "../css/index.css">
+    <link rel="icon" type="image/png" href="../img/favicon.png"/>
     <title>Coraje, el perro cobarde</title>
 </head>
 <body>
     <body>    
         <div class="container">
             <header class="header">
-                <a href="index.html"><img src="img/logo 2.png"></a>
+                <a href="index.html"><img src="../img/logo 2.png"></a>
                 <aside class="sidebar">
                     <div >
                         <ul class="historia">
@@ -62,16 +62,16 @@
             </main>
 
                  <div class="related-post">
-                    <img src="img/muriel.png">
+                    <img src="../img/muriel.png">
                 </div>
                 <div class="related-post">                
-                    <img src="img/coraje.png">
+                    <img src="../img/coraje.png">
                 </div>
                 <div class="related-post">
-                    <img src="img/justo.png"> 
+                    <img src="../img/justo.png"> 
                 </div>
                 <div class="related-post">
-                <img src="img/la-reina.png"> 
+                <img src="../img/la-reina.png"> 
                 </div>  
 
 
@@ -79,7 +79,7 @@
             <footer class="footer">
                 <h4>footer</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, necessitatibus.</p>
-                <img src="img/morita2.png">
+                <img src="../img/morita2.png">
             </footer>
     
         </div>
