--- a/views/villanos.html
+++ b/views/villanos.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "css/villanos.css">
+    <link rel="icon" type="image/png" href="../img/favicon.png"/>
+        <link rel="stylesheet" type="text/css" href= "../css/villanos.css">
     <title>Villanos</title>
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <a href="index.html"><img src="img/logo 2.png"></a>
+            <a href="index.html"><img src="../img/logo 2.png"></a>
             <aside class="sidebar">
                 <div >
                     <ul class="historia">
@@ -39,73 +39,73 @@
             <article class="article">
                 <div class="related-post">   
                      <h1>Cabezas de Carne</h1>
-                    <img src="img/cabezas.png"> 
+                    <a href="cabezas.html"><img src="../img/cabezas.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>La Sombra</h1>
-                    <img src="img/sombra.png"> 
+                    <a href="sombra.html"><img src="../img/sombra.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Ramses</h1>
-                    <img src="img/ramses.png"> 
+                    <a href="ramses.html"><img src="../img/ramses.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Dcotor Gerbil</h1>
-                    <img src="img/drgerbil.png"> 
+                    <a href="gerbil.html"><img src="../img/drgerbil.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Fusili</h1>
-                    <img src="img/fusili.png"> 
+                   <a href="fusili.html"><img src="../img/fusili.png"> </a> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>El extraterrestre</h1>
-                    <img src="img/elextraterrestre1.png"> 
+                    <a href="extraterrestre.html"></a><img src="../img/elextraterrestre1.png"> 
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                     <h1>Zorro Cajún</h1>
-                    <img src="img/elzorro1.png"> 
+                    <a href="elzorro.html"><img src="../img/elzorro1.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>La reina del charco</h1>
-                    <img src="img/la-reina.png"> 
+                    <a href="reina.html"><img src="../img/la-reina.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Doctor Zalost</h1>
-                    <img src="img/dotot2.png"> 
+                    <a href="doctorz.html"><img src="../img/dotot2.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Le Quack</h1>
-                    <img src="img/x.png"> 
+                    <a href="lecuack.html"><img src="../img/x.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>El Espeluznante Fred</h1>
-                    <img src="img/freddy.png"> 
+                    <a href="fredy.html"><img src="../img/freddy.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Shirley</h1>
-                    <img src="img/shirley.png"> 
+                    <a href="shirley.html"><img src="../img/shirley.png"> </a>
                  </div>
             </article>
 
