--- a/views/jorobado.html
+++ b/views/jorobado.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "css/galeria.css">
+    <link rel="icon" type="image/png" href="../img/favicon.png"/>
+        <link rel="stylesheet" type="text/css" href= "../css/galeria.css">
     <title>Galeria</title>
 </head>
 <body>
 
     <div class="container">
         <header class="header">
-            <a href="index.html"><img src="img/logo 2.png"></a>
+            <a href="index.html"><img src="../img/logo 2.png"></a>
             <aside class="sidebar">
                 <div >
                     <ul class="historia">
@@ -37,26 +37,7 @@
             </aside>
         </header>
         <main class="content">
-            <div class='gallery'>
-                <h1>GALERÍA DE FOTOS</h1>
-                 <div class='card'>
-                  <div class='gallery-carousel'>
-                     <img src="img/carrusel1.jpg" alt="Girl in a jacket" > 
-                    <img src="img/carrusel2.jpg" alt="Girl in a jacket" > 
-                    <img src="img/carrusel3.webp" alt="Girl in a jacket" > 
-                    <img src="img/carrusel4.webp" alt="Girl in a jacket" > 
-                  </div>
-              </div>
-              <div class='card'>
-                <div class='gallery-carousel'>
-                   <img src="img/ju.jpg" alt="Girl in a jacket" > 
-                  <img src="img/96e43d9785cfeac29db4d8cf9865afa4.jpg" alt="Girl in a jacket" > 
-                  <img src="img/ad28de228827de20951800e7585a25c4.jpg" alt="Girl in a jacket" > 
-                  <img src="img/img-principal2.png" alt="Girl in a jacket" > 
-                  <img src="img/murielyjusto.jpg" alt="Girl in a jacket" > 
-                </div>
-            </div>
-            </div>
+
         </main>
         <footer class="footer">
             <h4>footer</h4>
