--- a/views/mamajusto.html
+++ b/views/mamajusto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" href="../img/favicon.png"/>
         <link rel="stylesheet" type="text/css" href= "css/galeria.css">
     <title>Galeria</title>
 </head>
@@ -12,7 +12,7 @@
 
     <div class="container">
         <header class="header">
-            <a href="index.html"><img src="img/logo 2.png"></a>
+            <a href="index.html"><img src="../img/logo 2.png"></a>
             <aside class="sidebar">
                 <div >
                     <ul class="historia">
