--- a/views/personajes.html
+++ b/views/personajes.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "css/personajes.css">
+    <link rel="icon" type="image/png" href="../img/favicon.png"/>
+        <link rel="stylesheet" type="text/css" href= "../css/personajes.css">
     <title>Personajes</title>
 </head>
 <body>
 
     <div class="container">
         <header class="header">
-            <a href="index.html"><img src="img/logo 2.png"></a>
+            <a href="index.html"><img src="../img/logo 2.png"></a>
             <aside class="sidebar">
                 <div >
                     <ul class="historia">
@@ -40,74 +40,74 @@
             <article class="article">
                 <div class="related-post">       
                     <h1>Coraje</h1>             
-                    <a href="coraje.html"><img src="img/coraje.png"></a>
+                    <a href="coraje.html"><img src="../img/coraje.png"></a>
                 </div>
             </article>
 
             <article class="article">
                 <div class="related-post">             
                     <h1>Muriel</h1>
-                    <a href="muriel.html"><img src="img/muriel.png"></a>
+                    <a href="muriel.html"><img src="../img/muriel.png"></a>
                 </div>
             </article>
             <article class="article">
                 <div class="related-post">     
                     <h1>Justo</h1>
-                    <a href="justo.html"><img src="img/justo.png"> </a>
+                    <a href="justo.html"><img src="../img/justo.png"> </a>
                </div>
             </article>
             <article class="article">
                 <div class="related-post">          
                     <h1>Computadora</h1>
-                    <a href="computadora.html"><img src="img/compu1.png"> </a>
+                    <a href="computadora.html"><img src="../img/compu1.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">     
                       <h1>La mamá de Justo</h1>
-                    <a href="mamajusto.html"><img src="img/mama.png"> </a>
+                    <a href="mamajusto.html"><img src="../img/mama.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">         
                      <h1>El Jorobado</h1>
-                    <a href="jorobado.html"><img src="img/jorobado.png"> </a>
+                    <a href="jorobado.html"><img src="../img/jorobado.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                     <h1>Zorro Cajún</h1>
-                    <a href="elzorro.html"><img src="img/elzorro1.png"> </a>
+                    <a href="elzorro.html"><img src="../img/elzorro1.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>La reina del charco</h1>
-                    <a href="reina.html"><img src="img/la-reina.png"> </a>
+                    <a href="reina.html"><img src="../img/la-reina.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Doctor Zalost</h1>
-                    <a href="doctorz.html"><img src="img/dotot2.png"> </a>
+                    <a href="doctorz.html"><img src="../img/dotot2.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Le Quack</h1>
-                    <a href="lecuack.html"><img src="img/x.png"> </a>
+                    <a href="lecuack.html"><img src="../img/x.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>El Espeluznante Fred</h1>
-                    <a href="fredy.html"><img src="img/freddy.png"> </a>
+                    <a href="fredy.html"><img src="../img/freddy.png"> </a>
                  </div>
             </article>
             <article class="article">
                 <div class="related-post">   
                      <h1>Shirley</h1>
-                    <a href="shirley.html"><img src="img/shirley.png"> </a>
+                    <a href="shirley.html"><img src="../img/shirley.png"> </a>
                  </div>
             </article>
         </main>
