se arreglan cositas xd

--- a/views/index.html
+++ b/views/index.html
@@ -62,16 +62,16 @@
             </main>
 
                  <div class="related-post">
-                    <img src="../img/muriel.png">
+                    <a href="muriel.html"><img src="../img/muriel.png"></a>
                 </div>
                 <div class="related-post">                
-                    <img src="../img/coraje.png">
+                    <a href="coraje.html"><img src="../img/coraje.png"></a>
                 </div>
                 <div class="related-post">
-                    <img src="../img/justo.png"> 
+                    <a href="justo.html"><img src="../img/justo.png"></a> 
                 </div>
                 <div class="related-post">
-                <img src="../img/la-reina.png"> 
+                    <a href="villanos.html"><img src="../img/la-reina.png"> </a>
                 </div>  
 
 
