Se termina interfaz de Coraje

--- a/css/personajes.css
+++ b/css/personajes.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(../img/ahhh\ 1.png);
+    background-image: url(../img/fondointer.png);
     background-size: cover;
 }
 
