--- a/css/coraje.css
+++ b/css/coraje.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Nunito:wght@300&family=Palette+Mosaic&family=Poppins:wght@200;300&family=Ubuntu:ital,wght@1,300&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +14,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(../img/fondointer3.png);
+    background-image: url(../img/fondointer.png);
     background-size: cover;
 }
 
@@ -20,7 +24,6 @@ body {
     padding: 20px 0;
     text-align: center;
     font-size: 2.9em;
-    color:  rgb(24, 11, 67);
 }
 
 /* CONTAINER */
@@ -47,11 +50,66 @@ body {
 .container .content{
     grid-column: 2/6;
     grid-row: 1/5;
+    background-color:rgba(230, 162, 174, 0.37) ;
     color: rgb(255, 255, 255);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
     
 }
+
+.content h1{
+    color: rgb(128, 18, 120);  
+    font-weight: 800;
+
+}
+
+.content  p{
+    margin-top: 40px;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+}
+
+.imgs{
+    margin: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.imgs img:hover{
+     border-radius:20%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 10px 10px rgb(62, 42, 85);
+    -webkit-box-shadow: 0px 0px 10px 10px rgb(62, 42, 85);
+}
+
+  .gallery div, h1{
+    display: flex;
+    justify-content: center;
+  }
+  
+
+  .card {
+    margin: 10px 10% 10px 10%;
+    background: white;
+    border-radius: 20px;
+  }
+
+
+  .gallery .gallery-carousel {
+    overflow-x: scroll;
+    height: fit-content;
+    display: flex;
+    gap: 20px;
+    white-space: nowrap;
+    margin: 20px 6% 19px;
+  }
+  
+  .gallery .gallery-carousel img {
+    border-radius: 5px;
+    height: 232px;
+    min-height: 232px;
+    width: 408px;
+    object-fit: cover;
+  }
 
 .container .header{
     grid-row: 1/5;
@@ -129,17 +187,7 @@ body {
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
-@media only screen and (max-width: 820px) {  
-     
-    .container .content{
-        background-color: transparent;
-            grid-column: 2/6;
-            grid-row: 1/4;
-            color: rgb(0, 0, 0);
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-    }
-
+@media only screen and (max-width: 820px) {   
 
     .container {
         display:block;
@@ -147,14 +195,22 @@ body {
         grid-template-columns: repeat(5, 1fr);
     }
     
+    .container .header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .header .sidebar{
         gap: 20px;
     }
 
-
-    .related-post{
-        display: flex;
-        justify-content: center;
+    .container .content{
         background-color: transparent;
     }
+    .imgs{
+        display: grid;
+
+    }
+
 }
