--- a/views/coraje.html
+++ b/views/coraje.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/galeria.css">
-    <title>Galeria</title>
+        <link rel="stylesheet" type="text/css" href= "../css/coraje.css">
+    <title>Coraje</title>
 </head>
 <body>
 
@@ -34,10 +34,24 @@
                         <a href="galeria.html"><li>Galeria</li></a>
                     </ul>
                 </div>
-            </aside>
+            </aside> 
         </header>
-        <main class="content">
- 
+        <main class="content" style="background-image: url();">
+            <h1>CORAJE</h1> 
+            <p>Coraje es el protagonista de la serie Coraje el Perro Cobarde. Es un perro rosado que fue encontrado por Muriel Bolsa después de escapar de la clínica veterinaria en la ciudad de Ningún Lugar.</p>
+
+            <p>Coraje, es un perro extremadamente cobarde y angustiado, que se asusta fácilmente por casi cualquier cosa. A pesar de esto, cuando sus dueños o amigos se enfrentan al peligro, no se detendrá ante nada para salvarlos, convirtiéndolo fácilmente en el personaje más valiente y moralmente alineado de toda la serie.
+            </p>
+            <p>
+                Coraje es algo infantil en su tiempo libre, ya que ha expresado interés y le gusta jugar con juguetes y construir castillos de arena, así como otras actividades infantiles o parecidas a perros (como enterrar o desenterrar cosas).
+            </p>
+            <div class="imgs">
+                <img src="../img/corajeinter4.png">
+                <img src="../img/corajeinter.png">
+                <img src="../img/corajeinter2.png">
+                <img src="../img/corajeinter3.png"> 
+            </div>
+
         </main>
         <footer class="footer">
             <h4>footer</h4>
