--- a/views/sombra.html
+++ b/views/sombra.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/galeria.css">
-    <title>Galeria</title>
+        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+    <title>Sombra</title>
 </head>
 <body>
 
