se terminan de hacer casi todas las interfaces, faltan 3 :'c

--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -73,7 +73,7 @@ body {
 .imgs{
     margin: 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .imgs img:hover{
