--- a/views/cabezas.html
+++ b/views/cabezas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Cabezas de Carne</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>JOSEPH ROY METHENY</h1> 
+            <p>Joseph Roy Metheny El Hamburguesero Canibal abrió su propio establecimiento a cielo abierto de venta de hamburguesas de carne de vacuno, y mantenía el lugar asesinando y mutilando personas para usar su carne y mezclarla con la de cerdo para obtener más y servirla en su establecimiento.  Su historia inspiró a John R. Dolworthpara realizar un personaje en su serie Courage The Cowardly Dog (Coraje El Perro Cobarde) para el episodio oncede la primera temporada llamado "Heads of Beef/ Cabezas de Carne" donde el restaurante local está dirigido aparentemente por una pareja de cerdos caníbales.</p>
 
+            <p>
+            Debido a un resfriado de Muriel, Coraje y Justo van a comer hamburguesas en un restaurante local dirigido por una pareja de cerdos aparentemente amistosos que en realidad son chefs caníbales. Estando en el sótano de la casa, Coraje empieza a sospechar que tal vez no sea carne de vaca lo que se sirve allí.        
+            </p>
+            
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/cerdo1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
