--- a/views/computadora.html
+++ b/views/computadora.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Computadora</title>
 </head>
 <body>
@@ -37,7 +37,17 @@
             </aside>
         </header>
         <main class="content">
+            <h1>COMPUTADORA</h1> 
+            <p>Tiene el típico aspecto de un ordenador viejo con una pantalla verde esmeralda. Su monitor es ancho color cascaron, detrás de el se encuentran un enramado de cables negros. Posee un escaner del mismo color y un ratón blanco. No tiene CPU.</p>
 
+            <p>Es un personaje inteligente que de vez en cuando demuestra su superioridad hacia Coraje. A veces suele ser un poco burlón.
+            </p>
+            <p>
+             La Computadora ayuda en múltiples ocasiones a Coraje cuando este necesita información para salvar a Muriel o Justo de monstruos extraños. En ocasiones lo llama "¡Perro estúpido!", pero cuando Coraje se enoja este demuestra su lado tímido, diciéndole "¡Ya, relájate, lo siento!"
+            </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/computadora.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
