--- a/views/coraje.html
+++ b/views/coraje.html
@@ -46,10 +46,10 @@
                 Coraje es algo infantil en su tiempo libre, ya que ha expresado interés y le gusta jugar con juguetes y construir castillos de arena, así como otras actividades infantiles o parecidas a perros (como enterrar o desenterrar cosas).
             </p>
             <div class="imgs">
-                <img src="../img/corajeinter4.png">
-                <img src="../img/corajeinter.png">
-                <img src="../img/corajeinter2.png">
-                <img src="../img/corajeinter3.png"> 
+                <a href="personajes.html"><img src="../img/corajeinter4.png"></a>
+                <a href="personajes.html"><img src="../img/corajeinter.png"></a>
+                <a href="personajes.html"><img src="../img/corajeinter2.png"></a>
+                <a href="personajes.html"><img src="../img/corajeinter3.png"> </a>
             </div>
 
         </main>
