--- a/views/doctorz.html
+++ b/views/doctorz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Doctor Zalost</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>DOCTOR ZALOST</h1> 
+            <p>El doctor Zalost es como se describe a si mismo, "el mas grande e infeliz científico que haya existido". Sufre de infelicidad que, al parecer le ha conferido su aspecto tan peculiar. Vive solo en su torre con Rata, que es a la vez secuaz y mascota. Se le ve e el episodio final de la temporada 2, "La torre del Dr.Zalost"..</p>
 
+            <p>Su piel es verde, con piernas delgadas. Con gran cabeza, tiene ojos rojos con ojeras moradas, con dientes del mismo color. Tiene una pequeña joroba.
+            </p>
+            <p>Se desconoce qué le causó su infelicidad. Le encantan las ciruelas. Desprecia a la humanidad,tachándolos de egoístas. Irónicamente, es hipócrita, creyendo que si el no es feliz, nadie merece serlo. Se cree que ha intentado ser feliz, pero sin éxito. Su relación con Rata es complicada y, muchas veces,abusiva. A pesar de que le ve como su único amigo, regularmente le reprocha no dar buenos abrazos (cosa que le calma) y habersele escapado los Bagge. 
+            </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/dotot3.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
