--- a/views/elzorro.html
+++ b/views/elzorro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>El zorro</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>ZORRO CAJÚN</h1> 
+            <p>El Zorro Cajún es un zorro naranja con unos ojos gigantes y saltones pero siempre usa un par de gafas de sol. A pesar de aparecer en solo dos episodios, se le considera uno de los rivales emblemáticos de Coraje.</p>
 
+            <p>
+                Zorro Cajún generalmente tiene una personalidad relajada, aunque a veces se vuelve loco cuando sus metas están en peligro. Él cree que "nació afortunado" y, como tal, puede ser muy competitivo para convertirse en el número uno. Por muy brutales que sean sus ofensas, trata a sus rivales con una amabilidad inusual y se muestra genuinamente educado y afable. Por alguna razón, sabe conducir un aplanadora y pilotar un avión.       
+            </p>
+            <p>En preparación para un concurso de cocina, Zorro Cajún se dio cuenta de que su barbacoa carecía del ingrediente principal una abuelita. Se puso las gafas y se dispuso a buscar una. Afortunadamente para él, una anciana dormida y su perro estaban en un parque cercano, por lo que se coló y secuestró a la dulce anciana, arrojando a su mascota a una fuente de agua. </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/cerdo1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
