--- a/views/fredy.html
+++ b/views/fredy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Freddy</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>FRED</h1> 
+            <p>Fred es el sobrino de Muriel que visita y aparece en el episodio "El Espeluznante Fred" . Él es uno de los antagonistas más memorables de la serie. Aunque Muriel parece muy encariñado con él, Coraje está aterrorizada de él, y Justo lo desprecia, a menudo lo llamaba "Espeluznante" y se refiere a él como "Un barbero espeluznante, con su propia barbería espeluznante, donde pasan cosas espeluznantes y horrendas".</p>
 
+            <p>Fred lleva un traje color verde oliva, corbata de color púrpura y siempre lleva un maletín, que tiene su preciosa rasuradora. Tiene el pelo rubio y cejas rubias de ojos verdes y una inquetante sonrisa.
+            </p>
+            <p>Rasgo dominante de Fred es una obsesión con el corte y/o afeitar el pelo de la gente hasta el punto en que son completamente calvos. Él parece ser capaz de controlar su trastorno hasta cierto punto, ya que es un peluquero, pero no puede ayudarse a sí mismo cuando la oportunidad es demasiado grande.
+            </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/fred.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
