--- a/views/jorobado.html
+++ b/views/jorobado.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Jorobado
     </title>
 </head>
@@ -38,7 +38,15 @@
             </aside>
         </header>
         <main class="content">
+            <h1>EL JOROBADO</h1> 
+            <p>Su característica más destacada es, obviamente, su joroba malformada de la columna vertebral, que domina toda la parte superior del torso. Su piel es de un tono horrible de color verde y se extiende sobre una cara arrugada y bulbosa. Él tiene un ojo morado con forma normal y uno que sobresale de su cavidad, sino que también tiene un cuero cabelludo completamente calvo, excepto dos grupos de cabello rojo desordenado a ambos lados de la cabeza. Hay una cicatriz justo debajo de la parte izquierda de su boca.</p>
 
+            <p>A pesar de su falta de atractivo físico - lo que lo hace un marginado social - el jorobado es muy amable y gentil. Él es una persona muy artística que muestra un gran talento para hacer música, títeres de sombra y la acrobacia trapecio. A pesar de que él mismo tiene poco deleite a los que los rechazan, él se enfurece por las personas que se aprovechan de otros más débiles que ellos. Pasa la mayor parte de sus días de excursión por el mundo, llevando consigo un conjunto abundante de campanas de bronce. La bondad de los extraños es un tema alegre para él, y él disfruta plenamente descubrir a estas personas en sus muchos viajes.
+            </p>
+            <p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/jorobado1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
