--- a/views/justo.html
+++ b/views/justo.html
@@ -37,7 +37,20 @@
             </aside>
         </header>
         <main class="content">
-          
+            <h1>JUSTO BOLSA</h1> 
+            <p>Es un granjero que vive en medio de Ningún Lugar con su esposa Muriel Bolsa y su perro Coraje. Por lo general, es antagonista de la serie, pero también ha tenido que aliarse con frecuencia o ser rescatado por Coraje.</p>
+
+            <p>Justo es un anciano muy ruin y fastidioso que suele estar enfadado y frustrado por el mundo que le rodea. Justo suele ser muy avaro cuando hay una oportunidad de tener mucho dinero. En casi todos los episodios, se lo ve sentado en su silla roja favorita mientras lee una copia del periódico de Ningún Lugar y posiblemente mirando la televisión.
+            </p>
+            <p>
+                Tiene un masivo odio por Coraje y con frecuencia lo llama "perro estúpido", y se complace en asustarlo y maltratarlo siempre que sea posible.
+            </p>
+            <div class="imgs">
+                <a href="personajes.html"><img src="../img/justo1.png"></a>
+                <a href="personajes.html"><img src="../img/justo2.png"></a>
+                <a href="personajes.html"><img src="../img/justo3.png"></a>
+                <a href="personajes.html"><img src="../img/justo4.png"> </a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
