--- a/views/lecuack.html
+++ b/views/lecuack.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Le Cuack</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>LE CUACK</h1> 
+            <p>Es un pato blanco de una estatura baja, lleva un cabello de color azul claro, con unos ojos achinados con pupilas negras y con un pico largo anaranjado con unos bigotes negros pequeños. En el cuello tiene un trozo de color rojo y unos piernas azules oscuros. En su cuello lleva una pajarita de color azul.
+            Una de las principales armas de Le Quack es un gran mazo, que usa en la mayoría de las batallas.</p>
 
+            <p>Le Quack es hábil y decisivo. Sus tendencias manipuladoras son especialmente dañinas cuando se combinan con su intelecto tortuoso en la persuasión psicológica. Como la mayoría de los antagonistas de la serie, es mucho más fuerte de lo que parece. Como estafador, tiene muchas caras, con una lujuria insuperable por ganancias monetarias. Para conseguir lo que quiere, utilizará a quien quiera y someterá al resto a sus perturbadores y poco ortodoxos métodos de tortura. Su contención es de corta duración, ya que es capaz de liberarse de cualquier prisión y dejarla en los desechos detrás de él.
+            </p>
+            </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/lecuack1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
