--- a/views/mamajusto.html
+++ b/views/mamajusto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Mamá de Justo</title>
 </head>
 <body>
@@ -37,7 +37,19 @@
             </aside>
         </header>
         <main class="content">
+            <h1>MAMÁ BOLSA</h1> 
+            <p>Es la madre de Justo y Horst y la suegra de Muriel, se parece mucho fisicamente a su hijo</p>
 
+            <p>Ma es una persona de piel blanca, de baja estatura y contextura algo ancha, siendo sus brazos muy delgados y cortos, además es calva, pero usa una peluca de color rosado. Viste una falda violeta, además de un buzo del mismo color y por arriba un saco de color lila, usa joyas en su cuello y muñeca, además de usar maquillaje y unos anteojos
+            </p>
+            <p>
+                Ella suele tener una personalidad dulce y amable cuando está con Coraje. Sin embargo, ella siempre ignoró a Justo cuando este era niño, pasando de malhumor generalmente.
+                Ma es la directora de la Corporación Peluche, en donde fabrican pelucas en serie, siendo en algunos episodios la villana, en donde trata de impedir que Coraje frustre sus planes.
+            </p>
+            <div class="imgs">
+                <a  href="personajes.html"><img src="../img/mamabolsa.png"></a>
+            </div>
+        </main>
         </main>
         <footer class="footer">
             <h4>footer</h4>
