--- a/views/muriel.html
+++ b/views/muriel.html
@@ -38,18 +38,15 @@
         </header>
         <main class="content">
             <h1>MURIEL BOLSA</h1> 
-            <p>Coraje es el protagonista de la serie Coraje el Perro Cobarde. Es un perro rosado que fue encontrado por Muriel Bolsa después de escapar de la clínica veterinaria en la ciudad de Ningún Lugar.</p>
+            <p>Muriel, una anciana muy amable y dulce dueña de Coraje, así como la estimada esposa de Justo Bolsa. Aunque ella es la damisela en apuros del programa, Muriel también es una excelente cocinera y no toleraría ninguna tontería o mala conducta, siempre usa su rodillo para golpear a Justo cada vez que asusta, se burla, abusa o maltrata de otra manera a Coraje.</p>
 
-            <p>Coraje, es un perro extremadamente cobarde y angustiado, que se asusta fácilmente por casi cualquier cosa. A pesar de esto, cuando sus dueños o amigos se enfrentan al peligro, no se detendrá ante nada para salvarlos, convirtiéndolo fácilmente en el personaje más valiente y moralmente alineado de toda la serie.
-            </p>
-            <p>
-                Coraje es algo infantil en su tiempo libre, ya que ha expresado interés y le gusta jugar con juguetes y construir castillos de arena, así como otras actividades infantiles o parecidas a perros (como enterrar o desenterrar cosas).
+            <p>Cuando tenía 3 años y medio, Muriel era una niña extremadamente traviesa, malcriada y hiperactiva.Sin embargo, hoy en día, es una ama de casa devota con un comportamiento verdaderamente gentil, dulce y amable. También le gustaba cocinar, tejer y acolchar.Debido a su bondad y naturaleza dulce e ingenua, Muriel es un objetivo fácil y a menudo atractiva para los villanos. No ayuda que ella también sea siempre amable con los extraños, e incluso los invita a su casa, sin ver cuáles eran sus verdaderas intenciones hasta que ellos mismos lo revelan. Afortunadamente, ella siempre tiene Coraje para salvar el día.
             </p>
             <div class="imgs">
-                <img src="../img/muriel3.png">
-                <img src="../img/muriel4.png">
-                <img src="../img/muriel5.png">
-                <img src="../img/muriel6.png"> 
+                <a href="personajes.html"><img src="../img/muriel3.png"></a>
+                <a href="personajes.html"><img src="../img/muriel4.png"></a>
+                <a href="personajes.html"><img src="../img/muriel5.png"></a>
+                <a href="personajes.html"><img src="../img/muriel6.png"></a>
             </div>
         </main>
         <footer class="footer">
