--- a/views/ramses.html
+++ b/views/ramses.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Ramses</title>
 </head>
 <body>
@@ -37,7 +37,15 @@
             </aside>
         </header>
         <main class="content">
+            <h1>RAMSES</h1> 
+            <p>El Rey Ramsés es el fantasma de un antiguo faraón egipcio. Aparece en el episodio "La maldicion del Rey Ramsés". Trae consigo tres plagas sobre la familia Bolsa con el fin de recuperar una antigua losa que fue robado de su tumba. Justo, dándose cuenta de que la tableta de piedra vale una fortuna, se niega a devolverla, y su familia empieza a verse afectada por la maldición del Rey Ramsés.</p>
 
+            <p>El Rey Ramses tiene un cráneo que recuerda a las máscaras funerarias egipcias, pero mucho más ruinoso y esquelético. Él tiene carne anaranjada, ojos morados con los blancos azules y dientes de color rosa y lleva un traje verde oscuro faraón egipcio con una gasa amarillenta verde alrededor de sus hombros.Tiene pelo tangerina.
+            </p>
+            <p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/ramses1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
