--- a/views/reina.html
+++ b/views/reina.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Reina del Charco</title>
 </head>
 <body>
@@ -37,7 +37,18 @@
             </aside>
         </header>
         <main class="content">
+            <h1>REINA DEL CHARCO NEGRO</h1> 
+            <p>Una reina seductora se materializa de un charco y enamora a Justo. Con el corazón roto de Muriel , Coraje debe sumergirse en las profundidades del charco y salvarlo, para su incomodidad porque él y Justo son enemigos.</p>
 
+            <p>
+                La Reina se basa en una sirena, una criatura de la mitología, que usa su apariencia seductora para atraer a los hombres a la muerte.
+                Hasta el momento es el monstruo con mas cantidad de muertes por lo que se puede ver en el patio de su guarida.  
+            </p>
+            <p>En preparación para un concurso de cocina, Zorro Cajún se dio cuenta de que su barbacoa carecía del ingrediente principal una abuelita. Se puso las gafas y se dispuso a buscar una. Afortunadamente para él, una anciana dormida y su perro estaban en un parque cercano, por lo que se coló y secuestró a la dulce anciana, arrojando a su mascota a una fuente de agua. </p>
+
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/reina.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
