--- a/views/shirley.html
+++ b/views/shirley.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Shirley</title>
 </head>
 <body>
@@ -37,7 +37,16 @@
             </aside>
         </header>
         <main class="content">
+            <h1>SHIRLEY</h1> 
+            <p>Shirley es una perra de raza chihuahua de color verde, delgada y de la misma estatura de Coraje, posee orejas largas y unos ojos muy grandes, siendo uno de color verde con anaranjado y otro de color solamente anaranjado, ambos con pupilas negras. Viste unas prendas</p>
 
+            <p>Su pasatiempos principal es hacer maldiciones sobre los que la desafían. Se nota que desprecia a los codiciosos e inhóspito, sometiéndolos a maldiciones para que aprendan. Irónicamente, ella es amante del dinero, y cobra una tarifa muy cara a sus clientes, aún así es agradable con la gente buena. Además de ser médium, ella es hechizara. También se sabe que le gusta tocar el saxofón.
+            </p>
+            <p>Sus servicios como un espiritualista se anuncian en el canal de canalización. Es de esta manera que fue encontrada por un granjero tratando de comunicarse con su hermano fallecido. Después advirtiéndole de las consecuencias de contacto.
+            </p>
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/shirley2.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
