--- a/views/sombra.html
+++ b/views/sombra.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../img/favicon.png"/>
-        <link rel="stylesheet" type="text/css" href= "../css/estilos.css">
+        <link rel="stylesheet" type="text/css" href= "../css/estilos2.css">
     <title>Sombra</title>
 </head>
 <body>
@@ -37,7 +37,15 @@
             </aside>
         </header>
         <main class="content">
+            <h1>LA SOMBRA</h1> 
+            <p>La Sombra es una sombra de un viejo rico y cruel que se liberó cuando murió. Encontró la casa de Justo y Muriel y comenzó a asustar a Justo y Coraje. Finalmente se revela que solo quería ser una estrella en el mundo del espectáculo, y que si quería ser una estrella, no debería haber asustado a la gente. Coraje ayudó la sombra a convertirse en una estrella real, donde se puso muy feliz y se despidió de él.</p>
 
+            <p>La Sombra es una sombra de un viejo rico y cruel que se liberó cuando murió. Encontró la casa de Justo y Muriel y comenzó a asustar a Justo y Coraje. Finalmente se revela que solo quería ser una estrella en el mundo del espectáculo, y que si quería ser una estrella, no debería haber asustado a la gente. Coraje ayudó la sombra a convertirse en una estrella real, donde se puso muy feliz y se despidió de él.</p>
+            <p></p>
+
+            <div class="imgs">
+                <a  id="compu" href="personajes.html"><img src="../img/sombra1.png"></a>
+            </div>
         </main>
         <footer class="footer">
             <h4>footer</h4>
